# cs2-tier1-analytics

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_grid_raw_series_states.py  0003_grid_sync_cursors.py  0004_grid_entity_maps.py  0005_grid_stats_snapshots.py  0006_job_runs.py  0007_external_entity_maps.py  0008_automation_settings.py
app/: __init__.py  analytics.py  backup.py  cli.py  config.py  http_retry.py  jobs.py  update_all.py
app/db/: __init__.py  session.py
app/demos/: __init__.py  awpy_adapter.py
app/dust2/: __init__.py  client.py  importer.py  parser.py  resolver.py  round_sync.py
app/grid/: __init__.py  audit.py  backfill.py  client.py  ids.py  ingest.py  stats.py
app/logging/: __init__.py  setup.py
app/metrics/: __init__.py  compute.py
app/models/: __init__.py  schema.py
app/pandascore/: __init__.py  client.py  ingest.py
app/quality/: __init__.py  coverage.py
cs2-tier1-analytics-frontend/: .env.example  CODEX_HANDOFF.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: ui-redesign-prompt.md
tests/: conftest.py  test_backup.py  test_demos_awpy.py  test_dust2.py  test_grid_audit.py  test_grid_backfill.py  test_grid_ingest.py  test_grid_stats.py  test_http_retry.py  test_pandascore.py  test_parsers.py  test_quality.py  test_repository_metrics_validation.py  test_team_alias_audit.py  test_team_aliases.py  test_valve_vrs.py  test_web_api.py  test_web_job_runtime.py
(+55 files in other folders)
