[project]
name = "cs2-tier1-analytics"
version = "0.1.0"
description = "HLTV CS2 tier-1 analytics scraper and metrics pipeline"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "beautifulsoup4>=4.12",
  "fastapi>=0.115",
  "httpx>=0.27",
  "psycopg[binary]>=3.1",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.9",
]
demo = [
  "awpy>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-m", "not live"]
markers = [
  "live: tests that contact HLTV and must be run manually",
]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
  "app/web/static",
  "data",
  "tests/fixtures",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "alembic*", "tests*"]
